[gd_scene load_steps=19 format=2]

[ext_resource path="res://addons/godot-openxr/scenes/first_person_controller_vr.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/godot-xr-tools/functions/Function_Grapple_movement.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/godot-xr-tools/functions/Function_Climb_movement.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/godot-xr-tools/functions/Function_JumpDetect_movement.tscn" type="PackedScene" id=5]
[ext_resource path="res://addons/godot-xr-tools/functions/Function_Turn_movement.tscn" type="PackedScene" id=6]
[ext_resource path="res://addons/godot-xr-tools/functions/Function_Pickup.tscn" type="PackedScene" id=7]
[ext_resource path="res://addons/godot-xr-tools/functions/Function_Jump_movement.tscn" type="PackedScene" id=8]
[ext_resource path="res://addons/godot-xr-tools/assets/PlayerBody.tscn" type="PackedScene" id=9]
[ext_resource path="res://addons/godot-xr-tools/functions/Function_pointer.tscn" type="PackedScene" id=10]
[ext_resource path="res://addons/godot-xr-tools/functions/Function_Direct_movement.tscn" type="PackedScene" id=11]
[ext_resource path="res://addons/godot-xr-tools/functions/Function_Glide_movement.tscn" type="PackedScene" id=12]
[ext_resource path="res://addons/godot-xr-tools/functions/Function_Wind_movement.tscn" type="PackedScene" id=13]
[ext_resource path="res://addons/godot-xr-tools/assets/RightHand.tscn" type="PackedScene" id=14]
[ext_resource path="res://addons/godot-xr-tools/assets/LeftHand.tscn" type="PackedScene" id=15]
[ext_resource path="res://game/player/Player.gd" type="Script" id=16]
[ext_resource path="res://assets/freesound.org/565491__jakegwizdak__wind-loop.mp3" type="AudioStream" id=17]

[sub_resource type="SphereMesh" id=1]
flip_faces = true
radius = 0.5
height = 1.0
radial_segments = 6
rings = 4

[sub_resource type="SpatialMaterial" id=2]
render_priority = 20
flags_transparent = true
flags_unshaded = true
flags_no_depth_test = true
albedo_color = Color( 0, 0, 0, 1 )

[node name="Player" type="Spatial"]
script = ExtResource( 16 )

[node name="FPController" parent="." instance=ExtResource( 1 )]

[node name="ARVRCamera" parent="FPController" index="1"]
far = 1000.0

[node name="MeshInstance" type="MeshInstance" parent="FPController/ARVRCamera" index="0"]
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="Tween" type="Tween" parent="FPController/ARVRCamera" index="1"]

[node name="LeftHand" parent="FPController/LeftHandController" index="0" instance=ExtResource( 15 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.03, -0.05, 0.15 )

[node name="Function_Pickup" parent="FPController/LeftHandController" index="1" instance=ExtResource( 7 )]
ranged_distance = 2.0
ranged_angle = 15.0

[node name="Function_Direct_movement" parent="FPController/LeftHandController" index="2" instance=ExtResource( 11 )]
enabled = false
order = 10
max_speed = 3.0
strafe = true

[node name="Function_Jump_movement" parent="FPController/LeftHandController" index="3" instance=ExtResource( 8 )]
enabled = false
order = 20
jump_button_id = 7

[node name="RightHand" parent="FPController/RightHandController" index="0" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.03, -0.05, 0.15 )

[node name="Function_pointer" parent="FPController/RightHandController" index="1" instance=ExtResource( 10 )]
enabled = false

[node name="Function_Pickup" parent="FPController/RightHandController" index="2" instance=ExtResource( 7 )]
ranged_distance = 2.0
ranged_angle = 15.0

[node name="Function_Turn_movement" parent="FPController/RightHandController" index="3" instance=ExtResource( 6 )]
enabled = true
order = 5
smooth_rotation = true
smooth_turn_speed = 2.0
step_turn_delay = 0.2
step_turn_angle = 20.0

[node name="Function_Direct_movement" parent="FPController/RightHandController" index="4" instance=ExtResource( 11 )]
enabled = false
order = 10
max_speed = 3.0
strafe = false

[node name="Function_Jump_movement" parent="FPController/RightHandController" index="5" instance=ExtResource( 8 )]
enabled = false
order = 20
jump_button_id = 7

[node name="Function_Grapple_movement" parent="FPController/RightHandController" index="6" instance=ExtResource( 3 )]
enabled = false
order = 20
grapple_length = 15.0
grapple_collision_mask = 2
impulse_speed = 10.0
winch_speed = 2.0
rope_width = 0.02
friction = 0.1
grapple_button_id = 15

[node name="PlayerBody" parent="FPController" instance=ExtResource( 9 )]

[node name="Function_Climb_movement" parent="FPController" instance=ExtResource( 4 )]
enabled = false
order = 15
forward_push = 1.0
fling_multiplier = 1.0
velocity_averages = 5
left_pickup = NodePath("../LeftHandController/Function_Pickup")
right_pickup = NodePath("../RightHandController/Function_Pickup")

[node name="Function_Glide_movement" parent="FPController" instance=ExtResource( 12 )]
enabled = false
order = 35
glide_detect_distance = 1.0
glide_min_fall_speed = -1.5
glide_fall_speed = -2.0
glide_forward_speed = 12.0
horizontal_slew_rate = 1.0
vertical_slew_rate = 2.0

[node name="Function_JumpDetect_Movement" parent="FPController" instance=ExtResource( 5 )]
enabled = false
order = 20
body_jump_enable = true
body_jump_player_only = false
body_jump_threshold = 2.5
arms_jump_threshold = 5.0

[node name="Function_Wind_movement" parent="FPController" instance=ExtResource( 13 )]
enabled = false
order = 25
drag_multiplier = 1.0
collision_mask = 524288

[node name="Sounds" type="Node" parent="."]

[node name="Gliding" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 17 )

[node name="GrappleFire" type="AudioStreamPlayer" parent="Sounds"]

[node name="RopeSwing" type="AudioStreamPlayer" parent="Sounds"]

[connection signal="tween_all_completed" from="FPController/ARVRCamera/Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="grapple_finished" from="FPController/RightHandController/Function_Grapple_movement" to="." method="_on_Function_Grapple_movement_grapple_finished"]
[connection signal="grapple_started" from="FPController/RightHandController/Function_Grapple_movement" to="." method="_on_Function_Grapple_movement_grapple_started"]
[connection signal="player_glide_end" from="FPController/Function_Glide_movement" to="." method="_on_Function_Glide_movement_player_glide_end"]
[connection signal="player_glide_start" from="FPController/Function_Glide_movement" to="." method="_on_Function_Glide_movement_player_glide_start"]

[editable path="FPController"]
